syntax = "proto3";

package trunk.oss.flakytests_cli.v1;

import "common.proto";
import "google/protobuf/timestamp.proto";

message UploadMetrics {
  Semver client_version = 1;
  Repo repo = 2;
  google.protobuf.Timestamp cli_started_at = 3;
  google.protobuf.Timestamp upload_started_at = 4;
  google.protobuf.Timestamp upload_finished_at = 5;
  bool failed = 6;
  string failure_reason = 7;
}

// Used by the analytics-uploader, kept here to avoid collisions in the future.
message UploaderUploadMetrics {
  Semver uploader_version = 1;
  Repo repo = 2;
  bool failed = 3;
  string failure_reason = 4;
}
